--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -19,6 +19,12 @@ jobs:
       backend: ${{ steps.filter.outputs.backend }}
 
     steps:
+    - uses: actions/checkout@v4
+      with:
+        clean: false
+        sparse-checkout: |
+          ./scripts
+          ./server-configs
     - uses: dorny/paths-filter@v3.0.2
       id: filter
       with:
