--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -1,10 +1,13 @@
 name: API CD Pipeline
 
 on:
-  workflow_run:
-    workflows: ["API CI Pipeline"]
-    types:
-      - completed
+  push:
+    branches: [ "aws" ]
+
+  # workflow_run:
+  #   workflows: ["API CI Pipeline"]
+  #   types:
+  #     - completed
 
 jobs: 
 
