--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -2,9 +2,8 @@ name: API CI Pipeline
 
 on:
   push:
-    branches: [ "aws" ]
-permissions:
-  contents: read  
+    branches: [ "server" ]
+    
 jobs:
 
   check-changes:
@@ -20,15 +19,19 @@ jobs:
       backend: ${{ steps.filter.outputs.backend }}
 
     steps:
-
+    - uses: actions/checkout@v4
+      with:
+        clean: false
+        sparse-checkout: |
+          ./scripts
+          ./server-configs
     - uses: dorny/paths-filter@v3.0.2
       id: filter
       with:
         filters: |
           backend:
             - 'server/**'
-        token: ${{ secrets.GITHUB_TOKEN }}
-        ref: master
+
     # Login required regardless of server changes
     - name: Login to Dockerhub
       env:
