--- a/.github/workflows/cd-server.yml
+++ b/.github/workflows/cd-server.yml
@@ -1,13 +1,13 @@
 name: API CD Pipeline
 
 on:
-  push:
-    branches: [ "aws" ]
+  # push:
+  #   branches: [ "aws" ]
 
-  # workflow_run:
-  #   workflows: ["API CI Pipeline"]
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows: ["API CI Pipeline"]
+    types:
+      - completed
 
 jobs: 
 
