--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -13,6 +13,12 @@ jobs:
     - uses: actions/checkout@v4
       with:
         clean: false
+    - uses: dorny/paths-filter@v3.0.2
+      id: filter
+      with:
+        filters: |
+          backend:
+            - 'server/**'
 
   # check-changes:
 
