--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
+        sparse-checkout:
+          ./server
         clean: false
     - uses: dorny/paths-filter@v3.0.2
       id: filter
