--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -15,3 +15,6 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./certs:/etc/nginx/certs
