--- a/.github/workflows/cd-server-root.yml
+++ b/.github/workflows/cd-server-root.yml
@@ -36,6 +36,6 @@ jobs:
         CONFIG_TYPE: root-server
       run: |
         touch .env.server && touch .env.proxy
-        sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server && echo ${{secrets.PROXIED1}} > .env.proxy'
+        sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server && echo ${{secrets.NGINX_ENV}} > .env.proxy'
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
