--- a/compose-server-root.yml
+++ b/compose-server-root.yml
@@ -22,6 +22,7 @@ services:
     command: "/bin/sh -c 
     'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
     "
+    env_file: .env.proxy
 
 
   certbot:
@@ -32,3 +33,4 @@ services:
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    
