--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -24,7 +24,7 @@ jobs:
 
   # Login to build from private registry (& install Docker if necessary)
   login-docker:
-    runs-on: [self-hosted, root-server, parallel-2]
+    runs-on: [self-hosted, root-server, root-server-runner-2]
     steps:
     - uses: actions/checkout@v4
       with:
