--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -7,13 +7,14 @@ server {
 	listen [::]:443 ssl;
     listen 443 ssl;
 
-    ssl_certificate /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/privkey.pem;
+
+    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 
-	server_name ec2api.flow-issue-tracker.com;
+	server_name ${SERVER_NAME};
 
 	location / {
 		proxy_pass http://api;
@@ -50,6 +51,6 @@ server {
 		root /var/www/certbot;
 	}
 
-	server_name ec2api.flow-issue-tracker.com;
+	server_name ${SERVER_NAME};
 
 }
