--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -10,11 +10,27 @@ services:
 
   reverse-proxy:
     image: nginx:latest
-    container_name: reverse-proxy 
+    container_name: reverse-proxy
     restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./certs:/etc/nginx/certs
+      - ./server-configs/root-server/pre-cert.conf:/etc/nginx/conf.d/config.conf
+      - ./server-configs/certbot/conf:/etc/letsencrypt
+      - ./server-configs/certbot/www:/var/www/certbot
+    command: "/bin/sh -c 
+    'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
+    "
+    env_file: .env.proxy
+
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    restart: unless-stopped
+    volumes:
+      - ./server-configs/certbot/conf:/etc/letsencrypt
+      - ./server-configs/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    
