--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   check-changes:
-    runs-on: [self-hosted, root-server-runner] 
+    runs-on: [self-hosted, root-server] 
 
     steps:
     - uses: actions/checkout@v4
@@ -27,7 +27,7 @@ jobs:
 
     strategy:
       matrix:
-        runner: [root-server-runner-2]
+        runner: [root-server-runner-2, proxied_1]
 
     runs-on:
       - self-hosted
