--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -4,7 +4,7 @@ on:
     # push:
     #     branches: [ "foo" ]
   workflow_run:
-    workflows: ["API Integration"]
+    workflows: ["API Integration"] #foo
     types:
       - completed
 
