--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -22,8 +22,8 @@ jobs:
           backend:
             - 'server/**'
 
-  # Login to Dockerhub (& install Docker if necessary)
-  login-docker:
+  # Install Docker if necessary)
+  check-docker:
 
     strategy:
       matrix:
@@ -48,13 +48,15 @@ jobs:
       env:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: echo "$DOCKER_PASSWORD" | docker login -u $DOCKER_USERNAME --password-stdin
+      run: |
+        sudo usermod -aG docker ${{secrets.DOCKER_USERNAME}}
+        echo "$DOCKER_PASSWORD" | docker login -u $DOCKER_USERNAME --password-stdin
 
   # Build and push backend code image
   build-backend:
     needs: 
       - check-changes
-      - login-docker
+      - check-docker
 
     if: ${{ needs.check-changes.outputs.backend == 'true' }}
     runs-on: [self-hosted, root-server]
