--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -49,8 +49,10 @@ jobs:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |
+        echo "$DOCKER_PASSWORD" | sudo docker login -u $DOCKER_USERNAME --password-stdin
         sudo usermod -aG docker $USER
-        echo "$DOCKER_PASSWORD" | docker login -u $DOCKER_USERNAME --password-stdin
+        sudo docker logout
+        echo "$DOCKER_PASSWORD" | sudo docker login -u $DOCKER_USERNAME --password-stdin
 
   # Build and push backend code image
   build-backend:
