--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -44,6 +44,6 @@ jobs:
       run: |
         touch .env.server && touch .env.proxy
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
-        sudo bash -c 'echo "FOO=BAR" > .env.proxy'
+        sudo bash -c 'echo "SERVER_NAME=\"${API_DOMAIN}\"" > .env.proxy'
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
