--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -45,6 +45,6 @@ jobs:
         echo "${{ matrix.server }}"
         touch .env.server && touch .env.proxy
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
-        sudo bash -c 'echo "SERVER_NAME=\"$API_DOMAIN\"" > .env.proxy'
+        sudo bash -c 'echo "SERVER_NAME=FOO" > .env.proxy'
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
