--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -38,11 +38,12 @@ jobs:
     - name: Compose Up Services 
       env:
         COMPOSE_FNAME: compose-server-proxied.yml
-        API_DOMAIN: ${{ secrets[format('{0}', matrix.server)] }}
+        API_DOMAIN: ${{ secrets[matrix.server] }}
         EMAIL: ${{secrets.EMAIL}} 
         CONFIG_TYPE: proxied
       run: |
-        echo "${{ secrets[format('{0}', matrix.server)] }}"
+        echo "${COMPOSE_FNAME}"
+        echo "${API_DOMAIN}"
         touch .env.server && touch .env.proxy
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
         sudo bash -c 'echo "SERVER_NAME=FOO" > .env.proxy'
