--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Compose Up Services 
       env:
         COMPOSE_FNAME: compose-server-proxied.yml
-        API_DOMAIN: ${{ secrets[matrix.server] }}
+        API_DOMAIN: ${{ vars[matrix.server] }}
         EMAIL: ${{secrets.EMAIL}} 
         CONFIG_TYPE: proxied
       run: |
@@ -46,6 +46,6 @@ jobs:
         echo "${API_DOMAIN}"
         touch .env.server && touch .env.proxy
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
-        sudo bash -c 'echo "SERVER_NAME=FOO" > .env.proxy'
+        sudo bash -c 'echo "SERVER_NAME=${API_DOMAIN}" > .env.proxy'
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
