--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -16,11 +16,17 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./server-configs/root-server/pre-cert.conf:/etc/nginx/conf.d/config.conf
+      # - ./server-configs/proxied/env.conf.template:/etc/nginx/templates/env.conf.template:ro
+
+      - ./server-configs/proxied/pre-cert.conf:/etc/nginx/conf.d/config.conf
+
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
     command: "/bin/sh -c 
-    'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
+    '
+    envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf &&
+    while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"
+    '
     "
     env_file: .env.proxy
 
