--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -22,12 +22,8 @@ services:
 
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
-    command: "/bin/sh -c 
-    '
-    envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf &&
-    while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"
-    '
-    "
+    command: /bin/sh -c 'envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf'
+    
     env_file: .env.proxy
 
 
