--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -22,7 +22,7 @@ services:
 
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
-    command: /bin/sh -c 'envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf'
+    command: /bin/bash -c 'envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf && nginx -g \'daemon off;\''
     
     env_file: .env.proxy
 
