--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -22,8 +22,10 @@ services:
 
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
-    command: /bin/bash -c 'envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf && nginx -g \'daemon off;\''
-    
+    command: "
+    /bin/bash -c 'envsubst < /etc/nginx/conf.d/pre-cert.conf > /etc/nginx/conf.d/config.conf && nginx -g \"daemon off;\"'
+    /bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
+    "
     env_file: .env.proxy
 
 
