--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -23,7 +23,7 @@ services:
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
     command: "
-    /bin/bash -c 'envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf && nginx -g \"daemon off;\"'
+    /bin/sh -c 'envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf && nginx -g \"daemon off;\"'
     /bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
     "
     env_file: .env.proxy
