--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -18,13 +18,15 @@ services:
     volumes:
       # - ./server-configs/proxied/env.conf.template:/etc/nginx/templates/env.conf.template:ro
 
-      - ./server-configs/proxied/pre-cert.conf:/etc/nginx/conf.d/config.conf
+      # - ./server-configs/proxied/pre-cert.conf:/etc/nginx/conf.d/config.conf
 
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
     command: "
-    /bin/sh -c 'envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf && nginx -g \"daemon off;\"'
-    /bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
+    /bin/sh -c '
+    envsubst < ./server-configs/proxied/pre-cert.conf > /etc/nginx/conf.d/config.conf && 
+    while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
+
     "
     env_file: .env.proxy
 
