--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -41,8 +41,8 @@ jobs:
     - name: Compose Up Services 
       env:
         COMPOSE_FNAME: compose-server-proxied.yml
-        API_DOMAIN: ${{ secrets[matrix.server] }}
-        SERVER_NAME: ${{ secrets[matrix.server] }}
+        API_DOMAIN: ${{ vars[matrix.server] }}
+        SERVER_NAME: ${{ vars[matrix.server] }}
         EMAIL: ${{secrets.EMAIL}} 
         CONFIG_TYPE: proxied
         
