--- a/compose-server-root.yml
+++ b/compose-server-root.yml
@@ -16,6 +16,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - ./server-configs/root-server/template.conf.template:/etc/nginx/templates/template.conf.template:ro
       - ./server-configs/root-server/pre-cert.conf:/etc/nginx/conf.d/config.conf
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
