--- a/.github/workflows/cd-server-root.yml
+++ b/.github/workflows/cd-server-root.yml
@@ -3,7 +3,7 @@ name: API Deployment (root-server)
 on:
 
   workflow_run:
-    workflows: ["API Integration"]
+    workflows: ["API Integration"] #foo
     types:
       - completed
 
@@ -36,7 +36,10 @@ jobs:
         EMAIL: ${{secrets.EMAIL}} 
         CONFIG_TYPE: root-server
       run: | 
-        touch .env.server && touch .env.proxy
-        sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server && echo "${{secrets.NGINX_ENV}}" > .env.proxy'
+        echo FOO
+        touch .env.server
+        touch .env.proxy
+        sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
+        sudo bash -c 'echo "${{secrets.NGINX_ENV}}" > .env.proxy'
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
