--- a/.github/workflows/cd-server-root.yml
+++ b/.github/workflows/cd-server-root.yml
@@ -11,7 +11,7 @@ jobs:
 
   build:
 
-    runs-on: [self-hosted, root-server]
+    runs-on: [self-hosted, root-server-runner]
 
     steps:
     - uses: actions/checkout@v4
