--- a/compose-server-root.yml
+++ b/compose-server-root.yml
@@ -20,9 +20,9 @@ services:
       # - ./server-configs/root-server/pre-cert.conf:/etc/nginx/conf.d/config.conf
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
-    command: "/bin/sh -c 
-    'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
-    "
+    # command: "/bin/sh -c 
+    # 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
+    # "
     env_file: .env.proxy
     # environment:
     # - NGINX_ENVSUBST_TEMPLATE_SUFFIX: ".conf"
