--- a/compose-server-root.yml
+++ b/compose-server-root.yml
@@ -21,8 +21,8 @@ services:
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
 
-    entrypoint:
-    - /docker-entrypoint.d/20-envsubst-on-templates.sh
+    # entrypoint:
+    # - /docker-entrypoint.d/20-envsubst-on-templates.sh
     env_file: .env.proxy
     # command: "/bin/sh -c
     # 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
