--- a/compose-server-root.yml
+++ b/compose-server-root.yml
@@ -24,9 +24,10 @@ services:
     # entrypoint:
     # - /docker-entrypoint.d/20-envsubst-on-templates.sh
     env_file: .env.proxy
-    # command: "/bin/sh -c
+    command: sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'
+    # "/bin/sh -c
     # 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
-    # "
+    # # "
     # environment:
     # - NGINX_ENVSUBST_TEMPLATE_SUFFIX: ".conf"
 
