--- a/.github/workflows/cd-server-root.yml
+++ b/.github/workflows/cd-server-root.yml
@@ -41,5 +41,6 @@ jobs:
         touch .env.proxy
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
         sudo bash -c 'echo "${{secrets.NGINX_ENV}}" > .env.proxy'
+        cat .env.proxy
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
