--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -22,6 +22,9 @@ services:
     command: "/bin/sh -c 
     'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
     "
+    environment:
+      DOLLAR: $
+
 
 
   certbot:
