--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -19,15 +19,15 @@ server {
 	location / {
 		proxy_pass http://api;
 		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Upgrade ${DOLLAR}http_upgrade;
 		proxy_set_header Connection 'upgrade';
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
+		proxy_set_header Host ${DOLLAR}host;
+		proxy_cache_bypass ${DOLLAR}http_upgrade;
 
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Cookie $http_cookie;
+		proxy_set_header X-Forwarded-Proto ${DOLLAR}scheme;
+		proxy_set_header X-Real-IP ${DOLLAR}remote_addr;
+		proxy_set_header X-Forwarded-For ${DOLLAR}proxy_add_x_forwarded_for;
+		proxy_set_header Cookie ${DOLLAR}http_cookie;
 
 		chunked_transfer_encoding off;
 		proxy_buffering off;
@@ -44,7 +44,7 @@ server {
 	listen [::]:80;
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://${DOLLAR}host${DOLLAR}request_uri;
     }
 
 	location /.well-known/acme-challenge/ {
