--- a/server-configs/proxied/pre-cert.conf
+++ b/server-configs/proxied/pre-cert.conf
@@ -4,7 +4,7 @@ server {
 	listen [::]:80;
 
     location / {
-        return 301 https://${DOLLAR}host${DOLLAR}request_uri;
+        return 301 https://$host$request_uri;
     }
 
 	location /.well-known/acme-challenge/ {
