--- a/.github/workflows/cd-server-root.yml
+++ b/.github/workflows/cd-server-root.yml
@@ -40,7 +40,7 @@ jobs:
         touch .env.server
         touch .env.proxy
         sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
-        sudo bash -c 'echo "${{secrets.NGINX_ENV}}" > .env.proxy'
+        sudo -E bash -c 'echo "${{secrets.NGINX_ENV}}" > .env.proxy'
         cat .env.proxy
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
